@@ -42,13 +42,31 @@
       this allows you to plot additional 2-d data on top of a contour
       plot.</li>
 
-<li>  It is no longer possible to mix Matlab-style plot commands with
-      the old (and now considered obsolete) style of plot commands
-      (<tt>__gnuplot_set__</tt>, etc.).  You can do one or the other,
-      but not both for the same plot.</li>
+<li>  The following plot commands are now considered obsolete and will
+      be removed from a future version of Octave:
+<pre>
+	__gnuplot_set__
+	__gnuplot_show__
+	__gnuplot_plot__
+	__gnuplot_splot__
+	__gnuplot_replot__
+</pre>
+      Additionally, these functions no longer have any effect on plots
+      created with the Matlab-style plot commands
+      (<tt>plot</tt>, <tt>line</tt>, <tt>mesh</tt>, <tt>semilogx</tt>,
+      etc.). 
 
 <li>  Plot property values are not extensively checked.  Specifying
       invalid property values may produce unpredictible results.</li>
+
+<li>  Octave now sends data over the same pipe that is used to send
+      commands to gnuplot.  While this avoids the problem of
+      cluttering /tmp with data files, it is no longer possible to use
+      the mouse to zoom in on plots.  This is a limitation of gnuplot,
+      which is unable to zoom when the data it plots is not stored in
+      a file.  Some work has been done to fix this problem in newer
+      versions of gnuplot (> 4.2.2).  See for example,
+      <a href="http://www.nabble.com/zooming-of-inline-data-tf4357017.html#a12416496">this thread</a> on the gnuplot development list.
 </ul></li>
 
 <li>The way Octave handles search paths has changed.  Instead of
@@ -156,6 +174,13 @@
     <tt>normpdf</tt>, and <tt>normrnd</tt> have been modified to
     compute distributions using the standard deviation instead of the
     variance.</li>
+
+<li>For compatibility with
+    Matlab, <tt>gamcdf</tt>, <tt>gaminv</tt>, <tt>gampdf</tt>,
+    <tt>gamrnd</tt>, <tt>expcdf</tt>, <tt>expinv</tt>, <tt>exppdf</tt>
+    and <tt>exprnd</tt> have been modified to compute the
+    distributions using the standard scale factor rather than one over
+    the scale factor.
 </ul>
 
 </body>
