@@ -63,24 +63,24 @@ the public CVS archive instead (see below for details).</dd>
 <td class="download">27 Mar 2006</td></tr>
 <tr><td class="download">
 <a href="ftp://ftp.octave.org/pub/octave">Testing</a> (you probably want this)</td>
-<td class="download">2.9.15
-    (<a href="ftp://ftp.octave.org/pub/octave/octave-2.9.15.tar.gz">.tar.gz</a>)
-    (<a href="ftp://ftp.octave.org/pub/octave/octave-2.9.15.tar.bz2">.tar.bz2</a>)
+<td class="download">2.9.16
+    (<a href="ftp://ftp.octave.org/pub/octave/octave-2.9.16.tar.gz">.tar.gz</a>)
+    (<a href="ftp://ftp.octave.org/pub/octave/octave-2.9.16.tar.bz2">.tar.bz2</a>)
 </td>
-<td class="download">13 Oct 2007</td></tr>
+<td class="download">31 Oct 2007</td></tr>
 <tr><td class="download">
 <a href="ftp://ftp.octave.org/pub/octave/bleeding-edge">Development</a>  (latest features, expect a few rough spots)</td>
-<td class="download">2.9.15
-    (<a href="ftp://ftp.octave.org/pub/octave/bleeding-edge/octave-2.9.15.tar.gz">.tar.gz</a>)
-    (<a href="ftp://ftp.octave.org/pub/octave/bleeding-edge/octave-2.9.15.tar.bz2">.tar.bz2</a>)
+<td class="download">2.9.16
+    (<a href="ftp://ftp.octave.org/pub/octave/bleeding-edge/octave-2.9.16.tar.gz">.tar.gz</a>)
+    (<a href="ftp://ftp.octave.org/pub/octave/bleeding-edge/octave-2.9.16.tar.bz2">.tar.bz2</a>)
 </td>
-<td class="download">13 Oct 2007</td></tr>
+<td class="download">31 Oct 2007</td></tr>
 <caption>Download links for Octave</caption>
 </table>
 </div>
 
 <blockquote class="note">
-<strong>PLEASE NOTE: Octave 2.9.15 is a pre-release
+<strong>PLEASE NOTE: Octave 2.9.16 is a pre-release
 version of Octave 3.0.  It is significantly different from Octave
 2.1.x, particularly with regard to graphics, path handling, and
 built-in variables.  Please read the <a href="NEWS-3.html">NEWS</a> file.</strong>
