@@ -17,6 +17,14 @@ __OCTAVE_HTTP__(`about.html', `about Octave').</p></div>
 __TITLE_BAR__(`Current News')
 
 <dl>
+<dt>October 31, 2007</dt>
+<dd>Version 2.9.16 is now available for ftp and is the new
+"testing" (also "recommended") version.  As noted on the download
+page, 2.9.16 is a pre-release version of Octave 3.0.  It is
+significantly different from Octave 2.1.x, particularly with regard to
+graphics, path handling, and built-in variables.  Please read the
+__OCTAVE_HTTP__(`NEWS-3.html', `NEWS') file.
+__MAIL_THREAD__(`maintainers', `2007', `October', `004645')</dd>
 <dt>October 13, 2007</dt>
 <dd>Version 2.9.15 is now available for ftp and is the new
 "testing" (also "recommended") version.  As noted on the download
